<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/home"
        />
    <item
        android:id="@+id/searchFragment"
        android:title="@string/search"
        android:icon="@drawable/search"/>
    <item
        android:id="@+id/readerFragment"
        android:title="@string/reader"
        android:icon="@drawable/play"
        />
    <item
        android:id="@+id/myBooksFragment"
        android:title="@string/my_books"
        android:icon="@drawable/group"
        />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/setting"
        android:title="@string/settings" />
</menu>